assets/scss/organisms/photo/_three-column-gallery.scss
.three-column-gallery {
    margin-top: 75px;

    .heading {
        @include breakpoint(small only) {
            margin-bottom: 36px;
        }
    }

    .gallery-images {

        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }

        > .cell {
            @include breakpoint(small only) {
                margin-left: 5px;
                margin-right: 5px;
                width: calc(33.33% - 10px);
            }
        }
    }

    .gallery-images > *:nth-child(odd) .photo-details-overlay {
        height: calc(45% - 10px);

        @include breakpoint(small only) {
            height: calc(45% - 5px);
        }

        &:first-of-type {
            height: calc(55% - 10px);

            @include breakpoint(small only) {
                height: calc(55% - 5px);
            }
        }
    }

    .gallery-images > *:nth-child(even) .photo-details-overlay {
        height: calc(55% - 10px);

        @include breakpoint(small only) {
            height: calc(55% - 5px);
        }

        &:first-of-type {
            height: calc(45% - 10px);

            @include breakpoint(small only) {
                height: calc(45% - 5px);
            }
        }
    }

    .gallery-text-content {
        padding: 96px 0;

        @include breakpoint(small only) {
            padding: 0;
        }
    }

    .photo-details-overlay:first-of-type {
        margin-bottom: 20px;

        @include breakpoint(small only) {
            margin-bottom: 10px;
        }
    }
}

